# c-sysprog-syscalls-practice

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/exemplos/: exemplo1.c  exemplo2.c  exemplo3.c  exemplo4.c  exemplo5.c  exemplo6.c  exemplo7.c  exemplo8.c  exemplo9a.c  exemplo9b.c
